Fixed Java incompatibilities